syntax = "proto3";

package espressopb;

import "google/protobuf/timestamp.proto";

service Espresso {
  rpc WatchBoilerTemperature(WatchBoilerTemperatureRequest) returns (stream WatchBoilerTemperatureResponse);
  rpc GetPIDConfig (GetPIDConfigRequest) returns (PIDConfig);
  rpc SetPIDConfig (PIDConfig) returns (PIDConfig);
}

message TemperatureSample {
    float value = 1;
    google.protobuf.Timestamp observed_at = 2;
}

message WatchBoilerTemperatureRequest {}

message WatchBoilerTemperatureResponse {
    TemperatureSample sample = 1;
}

message GetPIDConfigRequest {}

message PIDConfig {
    float temperature = 1;
    float p = 2;
    float i = 3;
    float d = 4;
    google.protobuf.Timestamp set_at = 5;
}
